--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1) load sub-partials in each page(need to load from same directory)
 2) loading on menu-item-click (side menu)
+3) page navigation (back & front) - add entry into history when menuClick happened
